# test-lab

./: README.md  main.py  pyproject.toml  run_tests.sh
tests/: conftest.py
tests/api/: test_health.py
tests/ui/: test_open_page.py
