[project]
name = "test-lab"
version = "0.1.2"
description = "Sandbox for exploring various tools and types of testing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "uvicorn>=0.42.0",
]
